@@ -23,6 +23,7 @@ PostGIS 1.0.0?
 	- jdbc2: slightly updated makefile
 	- plugged a leak in GEOS2POSTGIS converter
 	- jdbc2: added BETA support for jts geometry classes
+	- jdbc2: Skip known-to-fail tests against older PostGIS servers.
 
 PostGIS 1.0.0RC2
 2005/01/26
